--- a/php-fpm/ssmtp.conf
+++ b/php-fpm/ssmtp.conf
@@ -3,13 +3,13 @@
 #
 # The person who gets all mail for userids < 1000
 # Make this empty to disable rewriting.
-root=Kika.Ievlev@yandex.ru
+root=you@yandex.ru
 
 # The place where the mail goes. The actual machine name is required no
 # MX records are consulted. Commonly mailhosts are named mail.domain.com
 mailhub=smtp.yandex.ru:587
-AuthUser=Kika.Ievlev@yandex.ru
-AuthPass=spartakievlev17
+AuthUser=you@yandex.ru
+AuthPass=pass
 UseTLS=YES
 UseSTARTTLS=YES
 
@@ -17,7 +17,7 @@ UseSTARTTLS=YES
 rewriteDomain=yandex.ru
 
 # The full hostname
-hostname=Kika.Ievlev@yandex.ru
+hostname=you@yandex.ru
 
 # Are users allowed to set their own From: address?
 # YES - Allow the user to specify their own From: address
